Updates to content across my website.

--- a/_posts/2017-03-23-leaving-18F.md
+++ b/_posts/2017-03-23-leaving-18F.md
@@ -3,7 +3,7 @@ layout: post
 title: Leaving 18F
 ---
 
-![Julia Elman in front of the entrance to the West Wing, The White House](/assets/images/julia-solorzano-ww.jpg)
+![Julia Solorzano in front of the entrance to the West Wing, The White House](/assets/images/julia-solorzano-ww.jpg)
 
 In March 2015, I went to New York City to co-work with my new colleagues at the then-budding 18F NYC location (also referred to as "the beige"). We went out for lunch and talked about all our ideas for transforming government digital services and planting the seeds of change.
 
